--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -24,25 +24,25 @@ env:
   AWS_REGION: "us-east-1"
 
 jobs:
-  unit-test-linux:
-    name: Linux unit tests
-    runs-on: ubuntu-20.04
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{env.GO_VERSION}}
-
-      - name: Running unit tests
-        run: make ci/test
+#  unit-test-linux:
+#    name: Linux unit tests
+#    runs-on: ubuntu-20.04
+#
+#    steps:
+#      - uses: actions/checkout@v2
+#
+#      - name: Install Go
+#        uses: actions/setup-go@v2
+#        with:
+#          go-version: ${{env.GO_VERSION}}
+#
+#      - name: Running unit tests
+#        run: make ci/test
 
   packaging-linux:
     name: Build and upload all artifacts into GH Release assets
     runs-on: ubuntu-20.04
-    needs: [unit-test-linux]
+#    needs: [unit-test-linux]
 
     steps:
       - uses: actions/checkout@v2
@@ -56,33 +56,33 @@ jobs:
       - name: Releasing linux packages
         run: make ci/release
 
-  packaging-Windows:
-    name: Windows MSI build
-    runs-on: windows-latest
-    needs: [ packaging-linux ]
-
-    strategy:
-      matrix:
-        goarch: [ amd64, 386 ]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Get PFX certificate from GH secrets
-        shell: bash
-        run: printf "%s" "$PFX_CERTIFICATE_BASE64" | base64 -d - > wincert.pfx
-
-      - name: Import PFX certificate
-        shell: pwsh
-        run: build\windows\import_certificates.ps1 -pfx_passphrase "$env:PFX_PASSPHRASE" -pfx_certificate_description "$env:PFX_CERTIFICATE_DESCRIPTION"
-
-      - name: Build executables ${{ matrix.goarch }}
-        shell: pwsh
-        run: build\windows\package_msi.ps1 -arch ${{ matrix.goarch }} -tag ${{env.TAG}} -skipSigning #Remove skipSigning
-
-      - name: Upload MSI to GH
-        shell: bash
-        run: build/upload_artifacts_gh.sh
+#  packaging-Windows:
+#    name: Windows MSI build
+#    runs-on: windows-latest
+#    needs: [ packaging-linux ]
+#
+#    strategy:
+#      matrix:
+#        goarch: [ amd64, 386 ]
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#
+#      - name: Get PFX certificate from GH secrets
+#        shell: bash
+#        run: printf "%s" "$PFX_CERTIFICATE_BASE64" | base64 -d - > wincert.pfx
+#
+#      - name: Import PFX certificate
+#        shell: pwsh
+#        run: build\windows\import_certificates.ps1 -pfx_passphrase "$env:PFX_PASSPHRASE" -pfx_certificate_description "$env:PFX_CERTIFICATE_DESCRIPTION"
+#
+#      - name: Build executables ${{ matrix.goarch }}
+#        shell: pwsh
+#        run: build\windows\package_msi.ps1 -arch ${{ matrix.goarch }} -tag ${{env.TAG}} -skipSigning #Remove skipSigning
+#
+#      - name: Upload MSI to GH
+#        shell: bash
+#        run: build/upload_artifacts_gh.sh
 
 #  publishing-to-s3:
 #    name: Publish linux artifacts into s3 staging bucket
