--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -81,47 +81,46 @@ jobs:
         shell: bash
         run: build/upload_artifacts_gh.sh
 
-#  publishing-to-s3:
-#    name: Publish linux artifacts into s3 staging bucket
-#    runs-on: ubuntu-20.04
-#    needs: [packaging-linux]
-#
-#    strategy:
-#      max-parallel: 1
-#      matrix:
-#        assetsType:
-#          - "targz"
-#          - "deb"
-#          - "rpm"
+  publishing-to-s3:
+    name: Publish linux artifacts into s3 staging bucket
+    runs-on: ubuntu-20.04
+    needs: [packaging, packaging-msi]
 
-#    steps:
-#      - name: Login to DockerHub
-#        uses: docker/login-action@v1
-#        with:
-#          username: ${{ env.DOCKER_HUB_ID }}
-#          password: ${{ env.DOCKER_HUB_PASSWORD }}
-#      - name: Publish ${{ matrix.assetsType }} to S3 action
-#        uses: newrelic/infrastructure-publish-action@v1.0.14
-#        env:
-#          AWS_ACCESS_KEY_ID: ${{ secrets.OHAI_AWS_ACCESS_KEY_ID_STAGING }}
-#          AWS_SECRET_ACCESS_KEY: ${{ secrets.OHAI_AWS_SECRET_ACCESS_KEY_STAGING }}
-#          AWS_ROLE_ARN: ${{ secrets.OHAI_AWS_ROLE_ARN_STAGING }}
-#          AWS_ROLE_SESSION_NAME: ${{ secrets.OHAI_AWS_ROLE_SESSION_NAME_STAGING }}
-#        with:
-#          tag: ${{env.TAG}}
-#          app_name: "newrelic-infra"
-#          repo_name: "newrelic/infrastructure-agent"
-#          schema: "custom"
-#          schema_url: "https://raw.githubusercontent.com/newrelic/infrastructure-agent/${{ env.SCHEMA_BRANCH }}/build/upload-schema-linux-${{ matrix.assetsType }}.yml"
-#          aws_access_key_id: ${{ env.AWS_ACCESS_KEY_ID }}
-#          aws_secret_access_key: ${{ env.AWS_SECRET_ACCESS_KEY }}
-#          aws_s3_bucket_name: ${{ env.AWS_S3_BUCKET_NAME }}
-#          aws_s3_lock_bucket_name: ${{ env.AWS_S3_LOCK_BUCKET_NAME }}
-#          access_point_host: "staging"
-#          run_id: ${{ github.run_id }}
-#          aws_region: ${{ env.AWS_REGION }}
-#          aws_role_session_name: ${{ env.AWS_ROLE_SESSION_NAME }}
-#          aws_role_arn: ${{ env.AWS_ROLE_ARN }}
-#          # used for signing package stuff
-#          gpg_passphrase: ${{ env.GPG_PASSPHRASE }}
-#          gpg_private_key_base64: ${{ env.GPG_PRIVATE_KEY_BASE64 }}
+    strategy:
+      max-parallel: 1
+      matrix:
+        assetsType:
+          - "targz"
+          - "deb"
+          - "rpm"
+
+    steps:
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ env.DOCKER_HUB_ID }}
+          password: ${{ env.DOCKER_HUB_PASSWORD }}
+      - name: Publish ${{ matrix.assetsType }} to S3 action
+        uses: newrelic/infrastructure-publish-action@nrjmx_ci
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.OHAI_AWS_ACCESS_KEY_ID_STAGING }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.OHAI_AWS_SECRET_ACCESS_KEY_STAGING }}
+          AWS_ROLE_ARN: ${{ secrets.OHAI_AWS_ROLE_ARN_STAGING }}
+          AWS_ROLE_SESSION_NAME: ${{ secrets.OHAI_AWS_ROLE_SESSION_NAME_STAGING }}
+        with:
+          tag: ${{env.TAG}}
+          app_name: "nrjmx"
+          repo_name: "newrelic/nrjmx"
+          schema: "nrjmx"
+          aws_access_key_id: ${{ env.AWS_ACCESS_KEY_ID }}
+          aws_secret_access_key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+          aws_s3_bucket_name: ${{ env.AWS_S3_BUCKET_NAME }}
+          aws_s3_lock_bucket_name: ${{ env.AWS_S3_LOCK_BUCKET_NAME }}
+          access_point_host: "staging"
+          run_id: ${{ github.run_id }}
+          aws_region: ${{ env.AWS_REGION }}
+          aws_role_session_name: ${{ env.AWS_ROLE_SESSION_NAME }}
+          aws_role_arn: ${{ env.AWS_ROLE_ARN }}
+          # used for signing package stuff
+          gpg_passphrase: ${{ env.GPG_PASSPHRASE }}
+          gpg_private_key_base64: ${{ env.GPG_PRIVATE_KEY_BASE64 }}
