ci: added msi and zip to s3 publish

--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -93,6 +93,8 @@ jobs:
           - "targz"
           - "deb"
           - "rpm"
+          - "msi"
+          - "zip"
 
     steps:
       - name: Login to DockerHub
