--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -75,7 +75,7 @@ jobs:
 
       - name: Build MSI amd64
         shell: pwsh
-        run: build\windows\package_msi.ps1 -arch amd64 -tag ${{env.TAG}} -skipSigning #Remove skipSigning
+        run: build\windows\package_msi.ps1 -arch amd64 -tag ${{env.TAG}}  
 
       - name: Upload MSI to GH
         shell: bash
@@ -93,7 +93,7 @@ jobs:
           username: ${{ env.DOCKER_HUB_ID }}
           password: ${{ env.DOCKER_HUB_PASSWORD }}
       - name: Publish all to S3 action
-        uses: newrelic/infrastructure-publish-action@cciutea/nrjmx_ci
+        uses: newrelic/infrastructure-publish-action@v1.0.18
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.OHAI_AWS_ACCESS_KEY_ID_STAGING }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.OHAI_AWS_SECRET_ACCESS_KEY_STAGING }}
