--- a/pom.xml
+++ b/pom.xml
@@ -184,7 +184,7 @@
                             </execution>
                         </executions>
                         <configuration>
-                            <deb>target/${project.artifactId}_${project.version}-1_amd64.deb</deb>
+                            <deb>target/${project.artifactId}_${project.version}-1_noarch.deb</deb>
                             <dataSet>
                                 <data>
                                     <type>file</type>
@@ -252,8 +252,8 @@
                             <packager>New Relic Infrastructure Team &lt;infrastructure-eng@newrelic.com&gt;</packager>
                             <group>Application/System</group>
                             <sourceEncoding>utf-8</sourceEncoding>
-                            <targetOS>x86_64-linux</targetOS>
-                            <needarch>x86_64</needarch>
+                            <targetOS>linux</targetOS>
+                            <needarch>noarch</needarch>
                             <mappings>
                                 <mapping>
                                     <directory>/usr/lib/${project.artifactId}</directory>
