--- a/test-server/pom.xml
+++ b/test-server/pom.xml
@@ -21,10 +21,16 @@
             <artifactId>gson</artifactId>
             <version>2.8.9</version>
         </dependency>
+        <!-- This dependency is required to fix a security issue in a dependency -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-io</artifactId>
+            <version>9.4.39.v20210325</version>
+        </dependency>
         <dependency>
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-core</artifactId>
-            <version>2.9.3</version>
+            <version>2.9.1</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
