--- a/test-server/pom.xml
+++ b/test-server/pom.xml
@@ -24,6 +24,12 @@
         <!-- This dependency is required to fix a security issue in a dependency -->
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>9.4.41.v20210516</version>
+        </dependency>
+        <!-- This dependency is required to fix a security issue in a dependency -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-io</artifactId>
             <version>9.4.39.v20210325</version>
         </dependency>
