--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -15,7 +15,7 @@ env:
   PFX_CERTIFICATE_BASE64: ${{ secrets.OHAI_PFX_CERTIFICATE_BASE64 }} # base64 encoded
   PFX_CERTIFICATE_DESCRIPTION: 'New Relic'
   PFX_PASSPHRASE: ${{ secrets.OHAI_PFX_PASSPHRASE }}
-  TAG:  ${{ github.event.release.tag_name }}
+  TAG: ${{ github.event.release.tag_name }}
   DOCKER_HUB_ID: ${{ secrets.OHAI_DOCKER_HUB_ID }}
   DOCKER_HUB_PASSWORD: ${{ secrets.OHAI_DOCKER_HUB_PASSWORD }}
   SCHEMA_BRANCH: ${{ github.event.release.tag_name }}
@@ -76,7 +76,7 @@ jobs:
   packaging:
     name: Build and upload artifacts into GH Release assets
     runs-on: ubuntu-20.04
-    needs: [unit-test-linux, test-go-linux, check-gen-code]
+    needs: [ unit-test-linux, test-go-linux, check-gen-code ]
 
     steps:
       - uses: actions/checkout@v2
@@ -111,6 +111,10 @@ jobs:
         shell: pwsh
         run: build\windows\package_msi.ps1 -arch amd64 -tag ${{env.TAG}}
 
+      # This is required to fix connection reset issues.
+      - name: iptables
+        run: sudo iptables -A INPUT -i eth0 -m state --state INVALID -j DROP
+
       - name: Upload MSI to GH
         shell: bash
         run: build/upload_artifacts_gh.sh
@@ -118,7 +122,7 @@ jobs:
   publishing-to-s3:
     name: Publish linux artifacts into s3 staging bucket
     runs-on: ubuntu-20.04
-    needs: [packaging, packaging-msi]
+    needs: [ packaging, packaging-msi ]
 
     steps:
       - name: Login to DockerHub
@@ -126,6 +130,11 @@ jobs:
         with:
           username: ${{ env.DOCKER_HUB_ID }}
           password: ${{ env.DOCKER_HUB_PASSWORD }}
+
+      # This is required to fix connection reset issues.
+      - name: iptables
+        run: sudo iptables -A INPUT -i eth0 -m state --state INVALID -j DROP
+
       - name: Publish all to S3 action
         uses: newrelic/infrastructure-publish-action@v1
         env:
