--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -113,7 +113,7 @@ jobs:
 
       # This is required to fix connection reset issues.
       - name: iptables
-        run: sudo iptables -A INPUT -i eth0 -m state --state INVALID -j DROP
+        run: iptables -A INPUT -i eth0 -m state --state INVALID -j DROP
 
       - name: Upload MSI to GH
         shell: bash
@@ -133,7 +133,7 @@ jobs:
 
       # This is required to fix connection reset issues.
       - name: iptables
-        run: sudo iptables -A INPUT -i eth0 -m state --state INVALID -j DROP
+        run: iptables -A INPUT -i eth0 -m state --state INVALID -j DROP
 
       - name: Publish all to S3 action
         uses: newrelic/infrastructure-publish-action@v1
