--- a/.github/workflows/build_thrift_image.yml
+++ b/.github/workflows/build_thrift_image.yml
@@ -21,5 +21,5 @@ jobs:
           username: ${{ secrets.OHAI_DOCKER_HUB_ID }}
           password: ${{ secrets.OHAI_DOCKER_HUB_PASSWORD }}
       - name: Build and push docker image
-        run: make docker/publish
+        run: make ci/docker/publish
 
