--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -44,11 +44,11 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
+      - uses: actions/checkout@v2
       - name: Install Go
         uses: actions/setup-go@v4
         with:
-          go-version-file: 'go.mod'
-      - uses: actions/checkout@v2
+          go-version-file: 'gojmx/go.mod'
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -63,11 +63,11 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
+      - uses: actions/checkout@v2
       - name: Install Go
         uses: actions/setup-go@v4
         with:
-          go-version-file: 'go.mod'
-      - uses: actions/checkout@v2
+          go-version-file: 'gojmx/go.mod'
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
