--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,11 +34,11 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
+      - uses: actions/checkout@v2
       - name: Install Go
         uses: actions/setup-go@v4
         with:
-          go-version-file: 'go.mod'
-      - uses: actions/checkout@v2
+          go-version-file: 'gojmx/go.mod'
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -53,11 +53,11 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
+      - uses: actions/checkout@v2
       - name: Install Go
         uses: actions/setup-go@v4
         with:
-          go-version-file: 'go.mod'
-      - uses: actions/checkout@v2
+          go-version-file: 'gojmx/go.mod'
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
