--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -22,7 +22,6 @@ env:
   AWS_S3_BUCKET_NAME: "nr-downloads-ohai-staging"
   AWS_S3_LOCK_BUCKET_NAME: "onhost-ci-lock-staging"
   AWS_REGION: "us-east-1"
-  GO_VERSION: '1.16.10'
 
 jobs:
   unit-test-linux:
@@ -45,11 +44,11 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{env.GO_VERSION}}
       - uses: actions/checkout@v2
+      - name: Install Go
+        uses: actions/setup-go@v4
+        with:
+          go-version-file: 'gojmx/go.mod'
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -64,11 +63,11 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{env.GO_VERSION}}
       - uses: actions/checkout@v2
+      - name: Install Go
+        uses: actions/setup-go@v4
+        with:
+          go-version-file: 'gojmx/go.mod'
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
