--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,6 @@ name: Testing
 env:
   DOCKER_HUB_ID: ${{ secrets.OHAI_DOCKER_HUB_ID }}
   DOCKER_HUB_PASSWORD: ${{ secrets.OHAI_DOCKER_HUB_PASSWORD }}
-  GO_VERSION: '1.16.10'
 
 on:
   push:
@@ -35,11 +34,11 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{env.GO_VERSION}}
       - uses: actions/checkout@v2
+      - name: Install Go
+        uses: actions/setup-go@v4
+        with:
+          go-version-file: 'gojmx/go.mod'
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -54,11 +53,11 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - name: Install Go
-        uses: actions/setup-go@v2
-        with:
-          go-version: ${{env.GO_VERSION}}
       - uses: actions/checkout@v2
+      - name: Install Go
+        uses: actions/setup-go@v4
+        with:
+          go-version-file: 'gojmx/go.mod'
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
