updated changelog and security workflow

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -4,7 +4,9 @@ name: Security Testing
 on:
   push:
     branches:
-      - '**'
+      - master
+      - main
+      - renovate/**
   pull_request:
 
 jobs:
