--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -1,34 +1,50 @@
 ---
 name: Security Testing
 
-env:
-  SNYK_TOKEN: ${{ secrets.CAOS_SNYK_TOKEN }}
-  DOCKER_HUB_ID: ${{ secrets.OHAI_DOCKER_HUB_ID }}
-  DOCKER_HUB_PASSWORD: ${{ secrets.OHAI_DOCKER_HUB_PASSWORD }}
-
 on:
   push:
     branches:
-      - '**'
-    tags-ignore:
-      - '**'
-    paths-ignore:
-      - README.md
+      - master
+      - main
+      - renovate/**
+  pull_request:
 
 jobs:
-  scan-deps:
-    name: Run security checks Snyk
-    runs-on: ubuntu-20.04
+  scan-java:
+    name: Scan Java Dependencies
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - uses: actions/checkout@v4
+          
+      - name: Run Trivy vulnerability scanner for Java
+        uses: aquasecurity/trivy-action@0.29.0
         with:
-          username: ${{ env.DOCKER_HUB_ID }}
-          password: ${{ env.DOCKER_HUB_PASSWORD }}
-      - name: Scan java code for vulnerabilities with Snyk
-        run: make ci/snyk-test-java
+          scan-type: 'fs'
+          scan-ref: '.'
+          format: 'template'
+          template: '@/contrib/sarif.tpl'
+          output: 'trivy-results-java.sarif'
+          severity: 'HIGH,CRITICAL'
+          skip-dirs: 'gojmx/'
+        env:
+          TRIVY_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-db
+          TRIVY_JAVA_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-java-db
 
-      - name: Scan go code for vulnerabilities with Snyk
-        run: make ci/snyk-test-go
-
+  scan-go:
+    name: Scan Go Dependencies
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+          
+      - name: Run Trivy vulnerability scanner for Go
+        uses: aquasecurity/trivy-action@0.29.0
+        with:
+          scan-type: 'fs'
+          scan-ref: 'gojmx/'
+          format: 'template'
+          template: '@/contrib/sarif.tpl'
+          output: 'trivy-results-go.sarif'
+          severity: 'HIGH,CRITICAL'
+        env:
+          TRIVY_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-db
+          TRIVY_JAVA_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-java-db
